log
Wed, Mar 19, 2025  8:39:14 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:27:10 AM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:50:16: error: 'elemento' undeclared (first use in this function)
    pushBack(L, elemento) ;
                ^~~~~~~~
exercises.c:50:16: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function 'sumaLista':
exercises.c:61:23: error: comparison between pointer and integer [-Werror]
    for (int k = 0 ; k != NULL ; k++){
                       ^~
exercises.c:62:7: error: invalid use of undefined type 'struct List'
       cont += L[k] ;
       ^~~~
exercises.c:62:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       cont += L[k] ;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
f4d2892
Wed, Mar 19, 2025  9:29:25 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:61:23: error: comparison between pointer and integer [-Werror]
    for (int k = 0 ; k != NULL ; k++){
                       ^~
exercises.c:62:7: error: invalid use of undefined type 'struct List'
       cont += L[k] ;
       ^~~~
exercises.c:62:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       cont += L[k] ;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
1b402ff
Wed, Mar 19, 2025  9:39:48 AM: 
 exercises.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:23: error: comparison between pointer and integer [-Werror]
    for (int k = 0 ; k != NULL ; k++){ //revisar el null
                       ^~
exercises.c:63:7: error: invalid use of undefined type 'struct List'
       cont += L[k] ;
       ^~~~
exercises.c:63:16: error: dereferencing pointer to incomplete type 'List {aka struct List}'
       cont += L[k] ;
                ^
cc1.exe: all warnings being treated as errors
Compilation failed
ff1d015
Wed, Mar 19, 2025  9:44:52 AM: 
 exercises.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  1|4
total_score: 10/70
b3fb0d4
